--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -2,7 +2,10 @@
   "robotWidth": 0.9144,
   "robotLength": 0.9144,
   "holonomicMode": true,
-  "pathFolders": [],
+  "pathFolders": [
+    "toTheLeft",
+    "shoot2HighShots"
+  ],
   "autoFolders": [],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
