--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,8 +3,9 @@
   "robotLength": 0.9144,
   "holonomicMode": true,
   "pathFolders": [
-    "toTheLeft",
-    "shoot2HighShots"
+    "centerFarHoop",
+    "shoot2HighShots",
+    "toTheLeft"
   ],
   "autoFolders": [],
   "defaultMaxVel": 3.0,
