--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,9 +3,8 @@
   "robotLength": 0.9144,
   "holonomicMode": true,
   "pathFolders": [
-    "threeShotRight",
+    "bigMoveCenterNotes",
     "centerFarHoop",
-    "closeRight",
     "leftFar",
     "leftShootClose",
     "rightShoot",
